# haskell-editor-setup

./: .editorconfig  .envrc  .ghci  .ghcid  .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  Remove 260 Character Path Limit.reg  cabal.project  default.nix  haskell-editor-setup.cabal  haskell-editor-setup.cabal.bak  hes  index.html  install.hs  install.ps1  package.json  setup  shell.nix  stack.yaml
Research/: CD Comparison.md  CD&CI App Comparison.md  Continuous Integration Comparison.md  Continuous Integration Comparisonmd.md  Lens Comparison.md  Lens Vs microlens.md  nix configuration files.md
install/src/: HieInstall.hs
nix-haskell-vscode/: vscode.nix
src/: Main.hs  Main.old.hs  Types.hs  Util.hs  View.hs
src/OS/: Common.hs  Linux.hs  Prerequisites.hs
src/OS/Linux/: Debian.hs  NixOS.hs
