cabal-version:       2.4
name:                haskell-editor-setup
version:             0.1.0.0
synopsis:            GUI program that will set up Haskell environment with target selected editors or IDEs
license:             GPL-3.0-only
license-file:        LICENSE
author:              Răzvan Flavius Panda
maintainer:          razvan.panda@gmail.com
category:            Development
extra-source-files:  CHANGELOG.md, README.md

executable haskell-editor-setup
  main-is:             Main.hs
  other-modules:       OS.Linux,
                       OS.Linux.Debian,
                       OS.Prerequisites,
                       Types,
                       Util,
                       View
  build-depends:       base
                     , relude
                     , miso
                     , jsaddle-warp
                     , ghcjs-dom
                     , websockets
                     , directory
                     , text
                     , turtle
                     , lens
                     , placeholders

  mixins:   base hiding (Prelude)
          , relude (Relude as Prelude
                  , Relude.Unsafe)

  hs-source-dirs:      src

  default-language:    Haskell2010

  ghc-options: -threaded -Wall

  default-extensions: LambdaCase,
                      OverloadedStrings,
                      TemplateHaskell
