cabal-version:       2.4
name:                haskell-editor-setup
version:             0.1.0.0
synopsis:            GUI program that will set up Haskell environment with target selected editors or IDEs
license:             GPL-3.0-only
license-file:        LICENSE
author:              Răzvan Flavius Panda
maintainer:          razvan.panda@gmail.com
category:            Development
extra-source-files:  CHANGELOG.md, README.md

executable haskell-editor-setup
  main-is:             Main.hs
  other-modules:       OS.Linux,
                       OS.Linux.Debian,
                       OS.Common,
                       Types,
                       View
  build-depends:       base        ^>= 4.12.0.0
                     , relude       == 0.4.0
                     , miso         == 1.3.0.0
                     , jsaddle-warp == 0.9.6.0
                     , ghcjs-dom    == 0.9.4.0
                     , websockets   == 0.12.5.3
                     , directory    == 1.3.3.0
                     , text         == 1.2.3.1
                     , turtle       == 1.5.14
                     , lens         == 4.17.1
                     , placeholders == 0.1

  mixins:   base hiding (Prelude)
          , relude (Relude as Prelude
                  , Relude.Unsafe)

  hs-source-dirs:      src

  default-language:    Haskell2010

  ghc-options: -threaded -Wall -Wno-unused-top-binds

  default-extensions: LambdaCase,
                      OverloadedStrings,
                      TemplateHaskell